release-data/changelogs/9.2/plugins/benchmark-cis-windows-2022.adoc
= Changelogs for Rudder plugin benchmark-cis-windows-2022 9.2.\* versions

== benchmark-cis-windows-2022-9.2.0.beta1-0.10 (2026-08-31)

=== Changes


==== Miscellaneous

* publish cis windows 2022 benchmark
    (https://issues.rudder.io/issues/29328[#29328])

=== Bug fixes

==== Miscellaneous

* Fixed: webapp non-root: fix postinst for CIS plugins
    (https://issues.rudder.io/issues/29593[#29593])
* Fixed: upmerge caused control.yml file to differs
    (https://issues.rudder.io/issues/29362[#29362])
* Fixed: CIS Windows Server 2022 – null Value Required to Remove Users
    (https://issues.rudder.io/issues/29304[#29304])

=== Release notes

This is a bug fix release in the 9.2 series and therefore all installations of 9.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-windows-2022-9.2.0.alpha1-0.10 (2026-07-20)

=== Changes


==== Miscellaneous

* Benchmark derivation
    (https://issues.rudder.io/issues/28918[#28918])

=== Bug fixes

=== Release notes

This is a bug fix release in the 9.2 series and therefore all installations of 9.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

